[package]
name = "libwebp-sys"
version = "0.1.1"
authors = [ "Greg V <greg@unrelenting.technology>" ]
keywords = [ "WebP", "Image", "Picture", "Photo", "Codec" ]
description = "Bindings to libwebp (bindgen, static linking)"
license = "BSD"
readme = "README.md"
homepage = "https://github.com/myfreeweb/libwebp-sys"
repository = "https://github.com/myfreeweb/libwebp-sys"
build = "build.rs"

[build-dependencies]
bindgen = "0.50"
cmake = "0.1"
